Add hdf5 data output and clean up the whole code base

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,23 @@ cython_debug/
 *.so
 *.dylib
 *.dll
+
+# Cmake files
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+
+# Cmake build directory
+build/
+
+# Snapshots data
+snapshots*
