--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,6 +56,5 @@ endif()
 # Install rules
 install(
     TARGETS hydro
-    LIBRARY DESTINATION lib
-    RUNTIME DESTINATION bin
+    ARCHIVE DESTINATION lib
 )
