--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,7 @@ set(
     boundary.c
     error.c
     hydro.c
+    hydro_time.c
     integrator_random_choice_1d.c
     integrator_godunov_first_order_1d.c
     integrator_godunov_first_order_2d.c
